--- a/pg-newsletter.html
+++ b/pg-newsletter.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 1em;
       color: #0099ff;
-      background-color: transparent;
+      background-color: #000;
     }
   </style>
 </head>
