--- a/phoenix-weather.html
+++ b/phoenix-weather.html
@@ -1,5 +1,8 @@
 <html><head></head><body style="background: #00253D !important;">
-<a class="weatherwidget-io" href="https://forecast7.com/en/33d45n112d07/phoenix/?unit=us" data-label_1="PHOENIX" data-label_2="WEATHER" data-font="Roboto" data-theme="dark" data-basecolor="rgba(0, 37, 61, 1.0)" data-accent="rgba(255, 255, 255, 0)" data-suncolor="rgba(8, 125, 188, 1.0)" >PHOENIX WEATHER</a>
+
+<a class="weatherwidget-io" href="https://forecast7.com/en/33d45n112d07/phoenix/?unit=us" data-label_1="PHOENIX" data-label_2="WEATHER" data-theme="original" data-basecolor="#00253D" data-highcolor="#ffffff" data-lowcolor="#c3c3c3" data-suncolor="#ffffff" data-cloudcolor="#bababa" data-cloudfill="#00243E" >PHOENIX WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script></body></html>
+</script>
+
+</body></html>
